第三遍听写

--- a/IELTS/语料库听写/听写记录3.md
+++ b/IELTS/语料库听写/听写记录3.md
@@ -6,7 +6,7 @@ ability abstract accountant accuracy acid action activity actor adult adventure 
 cabinet cable cafe cafeteria cage Cambridge camel camera camp campus candidate candle canteen capital capitual carbon care career carput carving - ca- catagory cathedral cause cave cent centory certificate chair chance chanceller channel chapter charactor charge charity charm chat checklist check cheese chemist chest chick chicken child chin chocolate choice church cinema circle city clarity cleaner cleaning clients cliff climate clinic clock cloth clothing club coach cough cold coko cola colleague college comedy commercial commuter compain company complaint complex computer concert conclusion condition conferences confident confirmation congestion conqueror conquest convirsation conservation construction consultant consumption contact container contaminant contamination content continent contract contract controversy convenient co-operation cop copy corperation corpse corresponsdence cost costume cot cottage cough council country course crack craft cream credit creek crime crisis crocodile crop cultivation culture cup cupbard curtin customer cutlery cycle cycling damage danger data date day deadline debate 
 
 #### test paper 3
-debt decade decision decline decoration delay delegate delight delivery demenstration dentist department deposit depth description desert design designer desire desks destination detail diary dictation diet dining dinner dioxide direction director disagreement disaster displine disco disconfort discos discount discovery disease dish disposal dispute distance divorce document documentary donation donkey draft drama draw drawer drink drinking driver driving drug drum dur duration dust duty eagle ear east eating economy editor education elbow elder electricity element elevator emotion emperor employee employer encyclopedia ending energy engine engineer entrance epdemic equipment ethic evening event evidence examination example exception exchange excitement exiggersion execute exercise exhibition existance existing expansion expense experiment expert expernation explosion exposition exposure extension facility factor factory
+debt decade decision decline decoration delay delegate delight delivery demenstration dentist department deposit depth description desert design designer desire desks destination detail diary dictation diet dining dinner dioxide direction director disagreement disaster discipline disco disconfort discos discount discovery disease dish disposal dispute distance divorce document documentary donation donkey draft drama draw drawer drink drinking driver driving drug drum dur duration dust duty eagle ear east eating economy editor education elbow elder electricity element elevator emotion emperor employee employer encyclopedia ending energy engine engineer entrance epdemic equipment ethic evening event evidence examination example exception exchange excitement exiggersion execute exercise exhibition existance existing expansion expense experiment expert expernation explosion exposition exposure extension facility factor factory
 
 #### test paper 4
 falcuty failure falcon fan fare farm farmer famring fashion fat feet f- feature feedback fellowship female ferries festival firm  figure film finding finger firm fish fishing flag flash flap flight flood flooding flower flourish flow flu fly forest forestry form formula fortnight futune foyer freedom freezer freshman food fur furniture future gallery gap garage garbage garden gasoline gender germ gesture glass goal gold golf grade grades graduate graduates grain grass green ground group gross guest guide golf guy gym habit hand handball handbook handling handout hands headache heading health hearing heart heating hen herb hero heroes heroine hike hiking hint hints historian hit hits hobby holiday horse hospital hurb hero household hour 
@@ -15,10 +15,10 @@ falcuty failure falcon fan fare farm farmer famring fashion fat feet f- feature 
 hotel hotline hunt hunting idea identification identity image impact import inability incoming index industry infection influent information injection injury inland insect insomnia institute institution instruction instructor instrument interest internet interviewer introduction investigator investment irrigation island isolation item jacket jam jaw jeans journal judge juice junction junior keeper kelp keyword kid king kiosk kit kitchen kits knife knowledge koala lab lake lamp land landmark landscape language laptop laser lover lowyer layer lecture lecturer leisure lemon lender link lesson letter level library lift light line lion lifts lone location lock lost lounge loyalty luck lunch lung machine magazine maid mail majority making male manager mane manufacture map margin mark market marketing marsh master map matching material maturity maximum mill measure measurement meat media medication medicine medium method microphone migration mile mileage milk mine mineral mill minimum minute mixture model money monopoly month mood morality mosquito motel mountain 
 
 #### test paper 6
-moustache mouth movie muscle museum music musical musician nap nature naught neck ne- newspaper night noise north northeast northwest nose note notice nurse nursery nursing nut nutrition objective occation occupant ocean ocilist oppointment option order ordinary organizer original outline overdraft owner ownership Oxford package pal palace panic paper p- parent park parking participant passage passenger pastime patient payment podestrian pension pensioners percent performer perfume period periodical per- permit person personality pet petrol petrolum philosopher photo phtotgraph phisician phisics pianist piano picnic picture pie pill pink place placement plant planner plan plant planting plastic plate player playground pleasure pocket point police poll pollute pollution port position post postgraduate particulars
+moustache mouth movie muscle museum music musical musician nap nature naught neck ne- newspaper night noise north northeast northwest nose note notice nurse nursery nursing nut nutrition objective occation occupant ocean ocilist oppointment option order ordinary organizer original outline overdraft owner ownership Oxford package pal palace panic paper p- parent park parking participant passage passenger pastime patient payment podestrian pension pensioners percent performer perfume period periodical per- permit person personality pet petrol petrolum philosopher photo phtotgraph phisician phisics pianist piano picnic picture pie pill pink place placement plant planner plan plant planting plastic plate player playground pleasure pocket point police poll - pollute pollution port position post postgraduate particulars
 
 #### test paper 7
-potteries power powerpoint precaution presetion preference prepersition presctiption presitation presivation president prevention printing priority privacy price problem product production professors profit project promotion prone property perspectise protien psychaetrist psychologist psychotherapy publication pump purpose purse quality quantity quarter question radar radiator radio railway rain rainfall range rank rap rate rats rise reader reading reason reception recipe recorder recording recreation recruit recycling referee reference reflectant reform refuge region regulation relation relationship relaxibation relief religion remark removal renewal rent rental repitition replacement report reproduce research reservation reserve resident residence resource respondant response restaurant result retirement return review revision rice rider riders risk river robot rock rocket role 
+potteries power powerpoint precaution presetion preference prepersition presctiption presitation presivation president prevention printing priority privacy price problem product production professors profit project promotion prone property perspectise protien psychaetrist psychologist psychotherapy publication pump purpose purse quality quantity quarter question radar radiator radio railway rain rainfall range rank rap rate rats rise reader reading reason reception recipe recorder recording recreation recruit recycling referee reference reflectant reform refuge region regulation relation relationship relaxibation relief religion remark removal renewal rent rental repitition replacement report reproduce research reservation reserve residence resident resource respondant response restaurant result retirement return review revision rice rider riders risk river robot rock rocket role 
 
 #### test paper 8
 roommate route rule safari safety sail sailing salad salads salary sale salt sample sandle satellite saurce saving scale scandal scandals scare scent schedule scheme scholar scholarship science scientist score script sculpture sea season seat second secretary section sector selection selections seminar sense sentense servant service sewage sewer sex shade shape sheep shelf shell shelter ship shoe shoplifters shopper shortage shower side sight sign signature silent simulation singal sight size skating skeleton skill skin skirt slang slave sleep sleeping slip smell smoke smoking snack soil solution sound source south southeast southwest safe speaker speaking speed spending spider sponser spoon sportsman spot stability stack stage stair standard star starter starting state statement station status st- steam step skiing stop stomach stomachache stone store story strategy stribe strike style subject submit subsidy suburb sugar suit sunshield supervisor support surface surgen surname surprise survey survival sweater switch switches s- syndicate syrup system table tablet tape tack 
@@ -34,7 +34,7 @@ abnormal academic accessible accountable accurate additional adequate advanced a
 famed familar famous fancy fashionable favourite final financial fine firm flexible foregn formal former free frequent fundamental further general genetic geographicial global handy harmful - healthy heavier heavy helpful - higher highly-trained historical least ill illegal immune important impossible i- i- individual industrial informative initial inspiring intact intelligenct intensive interesting intermediate internal international irregular irritable isolated key latest legal little-konw loyal magic magical magnifacant majour martial mature medical mental mid migratory military miserable mobile moderate moderm musical natural negative neighbouring nervous noble noisy non-acitve normal northern objective occupational Olympic optic optional oral organic overall overhead overseas parental payable perfect personal psysical pleasant political pop
 
 #### test paper 3
-popular positive possible potensial practial precious prodicable present previous present previous printed private professional promising - psychological public pure purest queen random rapid rare roar recycled redundant rigional regular reinforced related relevant reliable remote resistant reverse rising royal rural sacked safe satisfactory scarce scientific seasonal sensoned secondary second-hand self-funded self-sufficient senior sensible serial series seven-screen several shared sharp short sick silent silver similar simple sleepy slim smart smelly social solar soundproof suddern spacious spare special specialize species specific spiral stable steady stunt strained stressful stretching strong stronger subjective successful sufficient suitable super surprised systematic technical theoretical traditional troublesome typical - uncomfortable unconvencing underground unfair unhealthy unique united unreliable unsocial unusual useful useless usual various violent virtual visible visure warm washable wealthy weekly western whole white while worthwile worthy
+popular positive possible potensial practial precious prodicable present previous printed private professional promising - psychological public pure purest queen random rapid rare roar recycled redundant rigional regular reinforced related relevant reliable remote resistant reverse rising royal rural sacked safe satisfactory scarce scientific seasonal sensoned secondary second-hand self-funded self-sufficient senior sensible serial series seven-screen several shared sharp short sick silent silver similar simple sleepy slim smart smelly social solar soundproof suddern spacious spare special specialize species specific spiral stable steady stunt strained stressful stretching strong stronger subjective successful sufficient suitable super surprised systematic technical theoretical traditional troublesome typical - uncomfortable unconvencing underground unfair unhealthy unique united unreliable unsocial unusual useful useless usual various violent virtual visible visure warm washable wealthy weekly western whole white while worthwile worthy
 
 #### test paper 4
 almost currently directly effectively efficiently originally - professionally rapidly regularly scarcely virtually
@@ -59,7 +59,7 @@ free for heating, free of charge, free transportation, fruit juice, fruit tree, 
 hotel crime, hunt for, health insurance, house key, housing agency, human being, human consumption, human race, human resources, ice curling, ice pack, ice skating, identities, identity card, illegal profit, invisible view, immune system, in advance, in chemistry lab, in circle, in circulation, Indian Ocean, incoming call, Independent Day, industrial material, information board, infromation video, information desk, information page, infromation sector, inland region, initial migration, injection of vaccine, institute, institution, insects haunting, instructors, instruction of handbook, instant coffee, inter personal skills, insurance companies, insurance company , intensive course, intensive study, interlibrary service, intermediate course, internal clock, international club, international evening, international studetn cart, international student, internet access, internet cafe, internet system, investigators, irrigable land, isolated spot, job interview, jaws, joint membership, keepers, jump the queue, jump the line, killer whale, Kungfu film, kelp forest, key approach, key to reception, keywords, kick sb out work, king-sized bed, King's suite, knives, kitchen table, kitchen utensils, lamps, listening tapescript, lack equipment, lack confidence, lack of confidence, landmark, large slide, large scale housing, lecture hall, laser printing, last but not least, last name, lawyers, layout of resume, learning strategies, learning styles, leisure wear, leisure acitivity, level of maturity, lemon tree, letter of recommondation, library card, library resource, life science, life cycle, life expectancy, life insurance, lights, link to, literiry film, list of headings, list of objective
 
 #### test paper 7
-living cose, living expenses, loan, local walking club, local history, local industry, local pet shop, local product, local resident, local school, local shop, local student, local tribe, lookout point, lock all windows, long-term loan, loss of soil, lose temper, loudspeaker, love story, low nutrition, low-frequency noise, low income, magazines and journals, magical animals, machines and robots, martial arts, maid servant, mail, mailing list, majour in nursing, main course, main entrance, main hall, main kitchen, main library, make an oppointment, make clan-, map of cave, manage time better, manmade dam, manual facilities, market research, market cycle, market economy, marketing management, marketing research, marketing technique, marketing seminar, marketing strategies, mass media, mind map, master's degree, master card, meat and cheese, mathematic formula, mature student, media studies, media center, media room, medical science, medical center, medical history, booklist, membership sonsultant, membership of club, mental ability, mental appilication, microwave oven, mid-autumn festival ,mid morning snacks, mid range, mid semester, migration pattern, mileage ticket, miles, millitory museum, mill the grain on the ground, millions of ,mountains, mineral water, minimun qualification, mining industry, mobile phone, modern languages, modern management hotel, modern sports facilities, money diary, money lender, money management, money order, monopoly of education ,mosquito net, mother-in-low, movie poster, movement of muscle, music equipment, music intrument, notice board, name badge, native animals, negative effice, natural medicine, natural museum, natural fiber, new technologies, nights, night shift, no allergy, no charge, no nuts, non-medicine item, non-stop flight, not check identity, not for circulation, number of exposure, number of occupants, nursing care, nusring diploma, occupational factors, nusery, nusery school, obligatory course, self-sufficient, off campus, office assistant, overfill, oil exposion olive oil, OHPEN
+living cost, living expenses, loan, local walking club, local history, local industry, local pet shop, local product, local resident, local school, local shop, local student, local tribe, lookout point, lock all windows, long-term loan, loss of soil, lose temper, loudspeaker, love story, low nutrition, low-frequency noise, low income, magazines and journals, magical animals, machines and robots, martial arts, maid servant, mail, mailing list, majour in nursing, main course, main entrance, main hall, main kitchen, main library, make an oppointment, make clan-, map of cave, manage time better, manmade dam, manual facilities, market research, market cycle, market economy, marketing management, marketing research, marketing technique, marketing seminar, marketing strategies, mass media, mind map, master's degree, master card, meat and cheese, mathematic formula, mature student, media studies, media center, media room, medical science, medical center, medical history, booklist, membership sonsultant, membership of club, mental ability, mental appilication, microwave oven, mid-autumn festival ,mid morning snacks, mid range, mid semester, migration pattern, mileage ticket, miles, millitory museum, mill the grain on the ground, millions of ,mountains, mineral water, minimun qualification, mining industry, mobile phone, modern languages, modern management hotel, modern sports facilities, money diary, money lender, money management, money order, monopoly of education ,mosquito net, mother-in-low, movie poster, movement of muscle, music equipment, music intrument, notice board, name badge, native animals, negative effice, natural medicine, natural museum, natural fiber, new technologies, nights, night shift, no allergy, no charge, no nuts, non-medicine item, non-stop flight, not check identity, not for circulation, number of exposure, number of occupants, nursing care, nusring diploma, occupational factors, nusery, nusery school, obligatory course, self-sufficient, off campus, office assistant, overfill, oil exposion olive oil, OHPEN
 
 #### test paper 8
 on campus, on foot, on sale, on small scale, one-way ticket, one-way, online shopping, opened admission, opened shelves, open-book exam, optic examination, optional course, optional expenses, oral defence, orange juice, ordinary farmers, organic farming, organic fiber, organic food, organic material, oriental study, original reason, out circulation, out of temper, out of loan, outside activity, overall aim the health club, overall trend, overdue and pay a fine, overhead projector, overhead view, overseas student, hitchhike, packages, package tour, packing list, Pacific Ocean, padding pool, pages, pal group relashionship, palaces, palm tree, paper jam, parents' meeting's aim, parental teaching, part-time job, part-time, part wears, passport photo, pay for loss, payment method, per day, per month, per person, per week, per year, permit required, personal alarm, personal statement, personal trainer, PHD, philosophers, phone bill, photocopies of notes, photocopies of articles, photocopy of article, photocopy office, physical activity, psysical education, psysical surrounding, psysical therapy, pie chart, pine tree, pink slip, placement test, planet science, planet society, - , planting garden, plastic bags, plastic collection, plus, pocket money, point of view, polish cars, poor area, pop test, population exposion, population growth, population of crocodile, positive effect, possible cause of stress, postal survey, power company, pratical material, pratical skills, precautions, precious stone, presentation skills, president suite, previous data, previous insurance company, previous result, previous study, price list, pricinpal, printed card, printed catalog, private bathroom, private property, private school, private trip, prize giving, professional learning, project work, project background, project outline, profits, psychological patients, psychological course, public transport, public awareness, public examination, public facilities, public health, public interest, public school, public service, public skills, quality of teaching, quality of education, quality of personnel, quarry tiles, property insurance, question handling, queen's suite, queen-sized bed, queen's park, RA, railway rail, railway station, railway tracks, railway worker, random selection
