--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -9,16 +9,16 @@
 |agriculture||
 |alley 小巷||
 |allowance||
-|amount||
-|analysis||
-|analyst||
-|ankle 脚踝|alteration 改变|
+|amount||ambulance|
+|analysis||analysis|
+|analyst||analyst|
+|ankle 脚踝|alteration 改变|alteration|
 |Antarctica 南极洲|Antarctica|
 |ape 猿||
 |appearance||
 |architect||
 |architectures 建筑物|architectures|
-|aristocrat 贵族|aristocrat|
+|aristocrat 贵族|aristocrat|aristocrat|
 |article||
 |aspirin|aspirin|
 |assignment||
@@ -47,7 +47,7 @@
 |brick|
 |bridge|bridge|
 |brochures 宣传册|brochures|
-|bungalow 平房|bungalow|
+|bungalow 平房|bungalow|bungalow|
 |burger|
 |burglar 窃贼|burglar|
 |bus|
@@ -56,16 +56,16 @@
 |cafeteria 自助餐厅|cafeteria|
 |Cambridge|Cambridge|
 |canteen 食堂|camel 骆驼|
-|capsule 胶囊|capsule|
+|capsule 胶囊|capsule|capsule|
 |carbon|
 |career|
-|carpet 地毯|carpet|
-|castle|cashier 出纳员|
+|carpet 地毯|carpet|carpet|
+|castle|cashier 出纳员|cashier|
 |category|
 |cathedral 大教堂|cathedral|
 |cause|
 |cents|
-|century|
+|century||century|
 |chancellor 大学校长|
 |channel|
 |character|
@@ -94,7 +94,7 @@
 |convenience|
 |corperation|
 |corpse 尸体|corpse|
-|correspondence 写信|correspondence|
+|correspondence 写信|correspondence|correspondence|
 |costume 戏服|
 |cough|
 |council|
@@ -134,21 +134,21 @@
 |emperor|emperor 皇帝|
 |encyclopedia 百科全书|encyclopedia|
 |engine|engine 发动机|
-|epidemic 流行病|epidemic|
+|epidemic 流行病|epidemic|epidemic|
 |ethic 伦理|ethic|
 |excitement|excitement 兴奋|
-|excursion 游玩|excursion|
+|excursion 游玩|excursion|excursion|
 |exercises|excuse 借口|
 |exhibition|existence 存在|
 |expansion 扩充|expansion|
-|explanation|explanation 解释|
+|explanation|explanation 解释|explanation|
 |explosion|
 |exposition 博览会|extension 分机，延期|
 |exposure 曝光|exposure|
 |**chapter 3.4**|
 |failure|
 |fashion|
-|feast 宴会|feast|
+|feast 宴会|feast|feast|
 |feather|ferries 摆渡；渡轮|
 |feature|
 |festival|
@@ -239,9 +239,9 @@
 |painting|
 |pair|
 |pal 伙伴|
-|parcel|parcel 包裹|
+|parcel|parcel 包裹|parcel|
 |pastime 娱乐活动|
-|pedestrian 行人|pedestrian|
+|pedestrian 行人|pedestrian|pedestrain|
 |pension 养老金|pension|
 |pensioners|pensioners 领退休金的人|
 |perfume 香水|
@@ -260,18 +260,18 @@
 |**chapter 3.7**|
 |pottery 陶器|pottery|
 |precaution 预防|precaution|
-|precision 精确|precision|
-|preposition 介词|prepositon|
-|prescription 药方|prescription|
-|presentation 介绍|
-|preservation 保存|
+|precision 精确|precision|precision|
+|preposition 介词|prepositon|preposition|
+|prescription 药方|prescription|prescription|
+|presentation 介绍||presentation|
+|preservation 保存||preservation|
 |privacy|
 |professor|
 |prone 倾向于|
 |property|
-|prospectus 招生简章|prospectus|
-|protein 蛋白质|protein|
-|psychiatrist 心理医生|psychiatrist|
+|prospectus 招生简章|prospectus|prospectus|
+|protein 蛋白质|protein|protein|
+|psychiatrist 心理医生|psychiatrist|psychiatrist|
 |psychologist 心理学家|psychologist|
 |psychotherapy 心理疗法|psychotherapy|
 |publication|
@@ -286,10 +286,10 @@
 |referee 裁判员|
 |reference 参考书|removal 去掉|
 |reflectance 反射率|reflectance|
-|relaxation 放松|relaxation|
+|relaxation 放松|relaxation|relaxation|
 |relief 缓解|relief|
 |religion 宗教|religion|
-|repetition|
+|repetition||repetition|
 |restaurant|
 |role 角色|role|
 |**chapter 3.8**|
@@ -298,9 +298,9 @@
 |sale|
 |salt|
 |sample|
-|sandal 凉鞋|sandal|
+|sandal 凉鞋|sandal|sandal|
 |satellite|
-|sauce 酱汁|sauce|
+|sauce 酱汁|sauce|sauce|
 |scandal 丑闻|scandal|
 |scandals|scandals|
 |scar|
@@ -323,7 +323,7 @@
 |simulation 模拟|
 |sketelon 骨架|
 |snack|
-|sponsor 发起人|
+|sponsor 发起人||sponsor|
 |spot|
 |steak 牛排|steak|
 |sting 刺|sting|
@@ -338,10 +338,10 @@
 |suit 西装|suit|
 |sunshield 遮阳板|sunshield|
 |supervisor 导师|
-|surgeon 外科医生|
+|surgeon 外科医生||surgeon|
 |surname|
 |survival|
-|symptom 症状|symptom|
+|symptom 症状|symptom|symptom|
 |syndicate 财团|syndicate|
 |syrup 糖浆|syrup|
 |tax 税收|tax|
@@ -350,7 +350,7 @@
 |teeth 牙齿|teeth|
 |texture 质地|
 |galaxy 星系|
-|theft 偷窃|theft|
+|theft 偷窃|theft|theft|
 |theory|
 |therapist 治疗专家|
 |therapy 疗法|
@@ -363,7 +363,7 @@
 |touching|tower 塔|
 |trend 趋势|trend|
 |tribe 部落|
-|trolley 手推车，有轨电车|trolley|
+|trolley 手推车，有轨电车|trolley|trolley|
 |tube 管子|tube|
 |tunnels|
 |tuition|
@@ -377,7 +377,7 @@
 |visa|vineger 醋|
 |vitamin 维他命|vitamin|
 |waist|
-|wasp 黄蜂|wasp|
+|wasp 黄蜂|wasp|wasp|
 |wasteland|
 |wax 蜡|wax|
 |wealth|
@@ -395,20 +395,20 @@
 |adequate 足够的|
 |advisable 明智的|
 |alternative 替代的|allergic 过敏的|
-|ambiguous 模糊的|
+|ambiguous 模糊的||ambiguous|
 |analytical 分析的|analytical|
 |applied|artificial 人工的|
 |archaeological 考古学的|archaeological|
-|ascending 上升的|
+|ascending 上升的||ascending|
 |atmospheric|
-|attentive 周到的|
+|attentive 周到的||attentive|
 |audio|
 |available|
 |auto 自动的|auto|
 |bald 秃头的|
 |barren 贫瘠的|blond 金发的|
 |buried 埋藏的|buried|
-|casual 偶然的，休闲的|
+|casual 偶然的，休闲的||casual|
 |central|
 |cheerful|
 |coastal 临海的|
@@ -427,7 +427,7 @@
 |eastern|
 |enormous 巨大的|
 |enthusiastic 热情的|enthusiastic|
-|essential 基本的|essential|
+|essential 基本的|essential|essential|
 |existent 现存的|
 |**chapter 4.2**|
 |familiar|
@@ -435,8 +435,8 @@
 |favourite|
 |general|
 |genetic 基因的|geographical 地理学的|
-|hazardous 冒险的|hazardous|
-|herbivorous 食草的|herbivorous|
+|hazardous 冒险的|hazardous|hazardous|
+|herbivorous 食草的|herbivorous|berbivorous|
 |highly-trained|inaccurate 不准确的|
 |illegal|
 |inadequate 不足的|inadequate|
@@ -489,7 +489,7 @@
 |serial 连续的|serial|
 |southern 南方的|southern|
 |spiral 螺旋形的|spacious 宽敞的|
-|stout 强壮的|
+|stout 强壮的||stout|
 |strained 因紧张而不自然的|strained|
 |sufficient|technical|
 |surprised|
@@ -497,7 +497,7 @@
 |theoretical 理论的|
 |traditional|traditional|
 |typical|typical典型的|
-|unanimous 一致通过的|
+|unanimous 一致通过的||unanimous|
 |unconvincing 不可信的|unconvincing|
 |unusual|wealthy 有钱的|
 |violent|whole 整个的|
