--- a/IELTS/语料库听写/标准答案.md
+++ b/IELTS/语料库听写/标准答案.md
@@ -6,7 +6,7 @@ ability abstract accountant accuracy acid action activity actor adult adventure 
 cabinet cable cafe cafeteria cage Cambridge camel camera camp campus candidate candle canteen capital capsule carbon care career carpet carving cashier castle category cathedral cause cave cents century certificate chair chance chancellor channel chapter character charge charity chart chat checklist checks cheese chemist's chest chick chicken child chin chocolate choice church cinema circle city clarity cleaner cleaning client cliffs climate clinic clock cloth clothing club coach coast code coke cola colleague college comedy commercials commuter companion company complaint complex computer concert conclusion condition conferences confidence confirmation congestion conqueror conquest conversation conservation construction consultant consumption contact container contaminants contamination content continent contract contracts controversy convenience cooperations cop copy corporation corpse correspondence cost costume cot cottage cough council country course crack craft cream credit creek crime crisis crocodile crop cultivation culture cup cupboard curtain customer cutlery cycle cycling damage danger data date day deadline debate
 
 #### test paper 3
-debt decade decision decline decorations delay delegate delight delivery demonstration dentist department deposit depth description desert design designer desire desk destination detail diary dictation diet dining dinner dioxide direction director disagreement disaster discipline disco discomfort disocs discount discovery disease dish disposal dispute distance divorce document documentary donation donkey draft drama draw drawer drink drinking driver driving drug drum due duration dust duty eagle ear east eating economy editor education elbow elder electricity elements elevator emotion emperor employee employer encyclopedia ending energies engine engineer entrance epidemic equipment ethic evening event evidence examination example exception exchange excitement excursion excuse exercises exhibition existence existing expansion expense experiment expert explanation explosion exposition exposure extension facility factor factory
+debt decade decision decline decorations delay delegate delight delivery demonstration dentist department deposit depth description desert design designer desire desk destination detail diary dictation diet dining dinner dioxide direction director disagreement disaster discipline disco discomfort discos discount discovery disease dish disposal dispute distance divorce document documentary donation donkey draft drama draw drawer drink drinking driver driving drug drum due duration dust duty eagle ear east eating economy editor education elbow elder electricity elements elevator emotion emperor employee employer encyclopedia ending energies engine engineer entrance epidemic equipment ethic evening event evidence examination example exception exchange excitement excursion excuse exercises exhibition existence existing expansion expense experiment expert explanation explosion exposition exposure extension facility factor factory
 
 #### test paper 4
 faculty failure falcon fan fare farm farmer farming fashion fat feast feather feature feedback fellowship female ferries festival field figure film finding finger firms fish fishing flag flash flat flight flood flooding flour flourish flow flu fly forest forestry form formula fortnight fortune foyer freedom freezer freshman fruit fur furniture future gallery gap garage garbage garden gasoline gender germ gesture glass goal gold golf grade grades graduate graduates grain grass green ground group growth guest guide gulf guy gym habit hand handball handbooks handling handout hat headache heading health hearing heart heating hen herb hero heroes heroine hike hiking hint hints historian hit hits hobby holiday horse hospital housework housing households hour
@@ -15,7 +15,7 @@ faculty failure falcon fan fare farm farmer farming fashion fat feast feather fe
 hotel hotline hunt hunting idea identification identity image impact imports inability incoming index industry infection influence information injection injury inland insect insomnia institute institution instruction instructor instrument interest internet interviewer introduction investigator investment irrigation island isolation item jacket jam jaw jeans journal judge juice junction junior keeper kelp keyword kid king kiosk kit kitchen kits knife knowledge koala lab lake lamp land landmark landscape language laptop laser lava lawyer layer lecture lecturer leisure lemon lender length lesson letter level library lift light line lion lists loan location lock loss lounge loyalty luck lunch lung machine magazine maid mail majority making male manager mane manufacture map margin mark market marketing marsh master mat matching material maturity maximum meal measure measurement meat media medication medicine medium method microphone migration mile mileage milk mine mineral mill minimum minute mixture model money monopoly month mood morality mosquito motel mountain 
 
 #### test paper 6
-moustache mouth movie muscle museum music musical musician nap nature naught neck net newspaper night noise north northeast northwest nose note notice nurse nursery nursing nut nutrition objective occasion occupant ocean oculist ointment option order ordinary organizer original outline overdraft owner ownership Oxford package pal palace panic paper parcel parent park parking participant passages passenger pastime patient payment pedestrain pension pensioners percent performer perfume period periodical perk permit person personality pet petrol petrolium philosopher photo photograph physician physics pianist piano picnic picture pie pill pink place placement plan planners plans plant planting plastic plate player playground pleasure pocket point police poll pollutant pollute pollution port position post postgraduate particulars
+moustache mouth movie muscle museum music musical musician nap nature naught neck net newspaper night noise north northeast northwest nose note notice nurse nursery nursing nut nutrition objective occasion occupant ocean oculist ointment option order ordinary organizer original outline overdraft owner ownership Oxford package pal palace panic paper parcel parent park parking participant passages passenger pastime patient payment pedestrain pension pensioners percent performer perfume period periodical perk permit person personality pet petrol petroleum philosopher photo photograph physician physics pianist piano picnic picture pie pill pink place placement plan planners plans plant planting plastic plate player playground pleasure pocket point police poll pollutant pollute pollution port position post postgraduate particulars
 
 #### test paper 7
 potteries power powerpoint precaution precision preference preposition prescription presentation preservation president prevention printing priority privacy prize problem product production professors profit project promotion prone property prospectus protein psychiatrist psychologist psychotherapy publication pump purpose purse quality quantity quarter question radar radiator radio railway rain rainfall range rank rat rate rats ray reader reading reason reception recipe recorder recording recreation recruit recycling referee reference reflectance reform refuge region regulation relation relationship relaxation relief religion remark removal renewal rent rental repetition replacement report reproduce research reservation reserve residence resident resource respondent response restaurant result retirement return review revision rice rider riders risk river robot rock rocket role
@@ -28,13 +28,13 @@ taxi tea teacher teaching team jargon term technology teeth telephone telescope 
 
 ## Chapter 4
 #### test paper 1
-abnormal academic accessible accountable accurate additional adequate advanced advisable allergic alternative amazing ambiguous ambitious analytical ancient angry applied archaeological artificial artistic ascending atmospheric attentive audio available aware awful auto bald barren basic beautiful biological blind blond British broad buried calculating casual central challenging cheaper cheerful children's classical clean cleanest clear clever coastal comfortable common commonsense complete completed confident conservative convenient co-operative corrupt costly cream critical crucial cultural curly current daily dairy dangerous dark departmental dependent detailed different direct disabled distant distinct domestic dominant eastern economic educational effective efficient elementary empty enormous enthusiastic environmental enssential excited exciting existent expensive experienced experimental extensive extra fair fake 
+abnormal academic accessible accountable accurate additional adequate advanced advisable allergic alternative amazing ambiguous ambitious analytical ancient angry applied archaeological artificial artistic ascending atmospheric attentive audio available aware awful auto bald barren basic beautiful biological blind blond British broad buried calculating casual central challenging cheaper cheerful children's classical clean cleanest clear clever coastal comfortable common commonsense complete completed confident conservative convenient co-operative corrupt costly cream critical crucial cultural curly current daily dairy dangerous dark departmental dependent detailed different direct disabled distant distinct domestic dominant eastern economic educational effective efficient elementary empty enormous enthusiastic environmental essential excited exciting existent expensive experienced experimental extensive extra fair fake 
 
 #### test paper 2
 famed familiar famous fancy fashionable favourite final financial fine firm flexible foreign formal former free frequent fundamental further general genetic geographical global handy harmful hazardous healthy heavier heavy helpful herbivorous higher highly-trained historical least ill illegal immune important impossible inaccurate inadequate individual industrial informative initial inspiring intact intelligent intensive interesting intermediate internal international irregular irritable isolated key latest legal little-known loyal magic magical magnificent major martial mature medical mental mid migratory military miserable mobile moderate modern musical natural negative neighbouring nervous noble noisy non-active normal northern objective occupational Olympic optic optional oral organic overall overhead overseas parental payable perfect personal physical pleasant political pop 
 
 #### test paper 3
-popular positive possible potential practical precious predictable present previous printed private professional promising psychiatric psychological public pure purest Queen's random rapid rare raw recycled redundant regional regular reinforced related relevant reliable remote resistant reverse rising royal rural sacked safe satisfactory scarce scientific seasonal seasoned secondary second-hand self-funded self-sufficient senior sensible serial serious seven-screen several shared sharp short sick silent silver similar simple sleepy slim smart smelly social solar soundproof southern spacious spare special specialized species specific spiral stable steady stout strained stressful stretching strong stronger subjective successful sufficient suitable super surprised systematic technical theoretical traditional troublesome typical unanimous uncomfortable unconvinceing underground unfair unhealthy unique united unreliable unsocial unusual useful useless usual various violent virtual visible visual warm washable wealthy weekly western whole wide wise worthwhile worthy
+popular positive possible potential practical precious predictable present previous printed private professional promising psychiatric psychological public pure purest Queen's random rapid rare raw recycled redundant regional regular reinforced related relevant reliable remote resistant reverse rising royal rural sacked safe satisfactory scarce scientific seasonal seasoned secondary second-hand self-funded self-sufficient senior sensible serial serious seven-screen several shared sharp short sick silent silver similar simple sleepy slim smart smelly social solar soundproof southern spacious spare special specialized species specific spiral stable steady stout strained stressful stretching strong stronger subjective successful sufficient suitable super surprised systematic technical theoretical traditional troublesome typical unanimous uncomfortable unconvincing underground unfair unhealthy unique united unreliable unsocial unusual useful useless usual various violent virtual visible visual warm washable wealthy weekly western whole wide wise worthwhile worthy
 
 #### test paper 4
 almost currently directly effectively efficiently originally physically professionally rapidly regularly scarcely virtually 
