--- a/IELTS/语料库听写/标准答案.md
+++ b/IELTS/语料库听写/标准答案.md
@@ -15,7 +15,7 @@ faculty failure falcon fan fare farm farmer farming fashion fat feast feather fe
 hotel hotline hunt hunting idea identification identity image impact imports inability incoming index industry infection influence information injection injury inland insect insomnia institute institution instruction instructor instrument interest internet interviewer introduction investigator investment irrigation island isolation item jacket jam jaw jeans journal judge juice junction junior keeper kelp keyword kid king kiosk kit kitchen kits knife knowledge koala lab lake lamp land landmark landscape language laptop laser lava lawyer layer lecture lecturer leisure lemon lender length lesson letter level library lift light line lion lists loan location lock loss lounge loyalty luck lunch lung machine magazine maid mail majority making male manager mane manufacture map margin mark market marketing marsh master mat matching material maturity maximum meal measure measurement meat media medication medicine medium method microphone migration mile mileage milk mine mineral mill minimum minute mixture model money monopoly month mood morality mosquito motel mountain 
 
 #### test paper 6
-moustache mouth movie muscle museum music musical musician nap nature naught neck net newspaper night noise north northeast northwest nose note notice nurse nursery nursing nut nutrition objective occasion occupant ocean oculist ointment option order ordinary organizer original outline overdraft owner ownership Oxford package pal palace panic paper parcel parent park parking participant passages passenger pastime patient payment pedestrain pension pensioners percent performer perfume period periodical perk permit person personality pet petrol petroleum philosopher photo photograph physician physics pianist piano picnic picture pie pill pink place placement plan planners plans plant planting plastic plate player playground pleasure pocket point police poll pollutant pollute pollution port position post postgraduate particulars
+moustache mouth movie muscle museum music musical musician nap nature naught neck net newspaper night noise north northeast northwest nose note notice nurse nursery nursing nut nutrition objective occasion occupant ocean oculist ointment option order ordinary organizer original outline overdraft owner ownership Oxford package pal palace panic paper parcel parent park parking participant passages passenger pastime patient payment pedestrian pension pensioners percent performer perfume period periodical perk permit person personality pet petrol petroleum philosopher photo photograph physician physics pianist piano picnic picture pie pill pink place placement plan planners plans plant planting plastic plate player playground pleasure pocket point police poll pollutant pollute pollution port position post postgraduate particulars
 
 #### test paper 7
 potteries power powerpoint precaution precision preference preposition prescription presentation preservation president prevention printing priority privacy prize problem product production professors profit project promotion prone property prospectus protein psychiatrist psychologist psychotherapy publication pump purpose purse quality quantity quarter question radar radiator radio railway rain rainfall range rank rat rate rats ray reader reading reason reception recipe recorder recording recreation recruit recycling referee reference reflectance reform refuge region regulation relation relationship relaxation relief religion remark removal renewal rent rental repetition replacement report reproduce research reservation reserve residence resident resource respondent response restaurant result retirement return review revision rice rider riders risk river robot rock rocket role
