--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -241,7 +241,7 @@
 |pal 伙伴|
 |parcel|parcel 包裹|parcel|
 |pastime 娱乐活动|
-|pedestrian 行人|pedestrian|pedestrain|
+|pedestrian 行人|pedestrian|pedestrian|
 |pension 养老金|pension|
 |pensioners|pensioners 领退休金的人|
 |perfume 香水|
