--- a/IELTS/Simon口语/笔记.md
+++ b/IELTS/Simon口语/笔记.md
@@ -178,4 +178,101 @@ specific vocabulary:
     festival: what it commemorates, religious significance, gifts, decorations, customs, special meal, public holiday
     sports: athletes, players, crowd, spectators, stadium, field/pitch/track, commentators, the contest, the score, the winner
     concert: band, group, orchestra, lighting, sound, stage, crowd, audience, instruments, voice, song, piece of music
-    
+=========================================================
+a hobby
+a sport
+a game
+something healthy that you do
+something new that you have
+done recently
+theme--healthy sport:
+    keep fit, stay in good condition
+    get in better shape
+    feel refreshed
+    rejuvenated, invigorated
+    gives me an energy boost
+    a good cardiovascular workout
+    build strength and endurance
+    a low-impact sport
+    helps to relieve stress
+    relaxing, helps to clear my mind
+theme--enjoyable game:
+    board game, a chese set
+    pieces e.g. king, queen, bishop
+    taking the opponent's pieces
+    checkmate
+    hone my skills
+    thinking ahead
+    out-think/outwit the opponent
+    concentration, mental workout
+    problem solving, strategy
+    learn from mistakes/losses
+===================================================================
+film or TV programme
+song/piece of music
+book
+website
+advertisement
+what, when, where, who, how, why?
+
+advertisement:
+    watch from lesson 5, describe an object
+song:
+    concert from lesson 6, describe a concert
+film: James Bond
+    the film is released
+    the ploy(story)
+    the genre e.g. action, drama
+    the cast: actors, roles, characters
+    scense, locations, special effects
+    I thoroutghly enjoyed it
+    spectacular, entertaining
+    great performances
+    I was on the edge of my seat
+    I was enthralled
+website: Facebook
+    social networking website
+    keep in contact with friends
+    find people you've lost touch with
+    post messages
+    write status updates
+    upload photos and videos
+    post links to other wetsite
+    check your news feed
+    find people with shared interests
+    connect with like-minded people
+book: novel or non-fiction
+    novel:
+        storyline, plot, genre
+        the author, the characters
+        entertaining, enthralling
+        I couldn't put it down
+    non-fiction book/textbook
+        topic, field, subject
+        informative, fascinating, inspiring
+        I learnt about / I found out about
+        it opened my mind to ...
+===============================================================
+describe an important choice that you had to make
+describe an idea you had for improving something at work or college
+describe a competition that you took part in
+describe a meeting that you went to at work, college or school
+describe a time when you were asked for your opinion in a survey
+describe a journey that you remember well
+describe an open-air or street market that you enjoyed visiting
+describe a shop near where you live that you sometimes use
+describe a conflict that you had, or a time when you became angry
+describe a beautiful sky that you enjoyed looking at
+describe an interesting story that someone told you
+describe a law in your country that you think is good
+describe a local news story that people in your area found interesting
+describe a time when you were stuck in traffic or delayed when travelling
+describe a time when you helped someone
+
+part 3:
+1. answer the question directly
+2. explain your answer(reasons)
+3. give an example
+4. explain the opposite/alternative
+    (what would happen if)
+
