--- a/IELTS/Simon口语/笔记.md
+++ b/IELTS/Simon口语/笔记.md
@@ -276,3 +276,14 @@ part 3:
 4. explain the opposite/alternative
     (what would happen if)
 
+Do you think that it's better to have clear aims for the future, or is it best to take each day as it comes?
+
+I think it's best to have a good idea of what you want to do with your life, expecially in terms of studies and career.
+Having aims allows you to plan what you need to do today and tomorrow in order to achieve longer-term objectives.
+For example, if you want to become a doctor, you need to choose the right subjects at school, get the right exam results, and work hard at university.
+Without a clear aim, it would be impossible to take the necessary steps towards a career in medicine or any other profession.
+
+overall:
+part 1 -- fluency
+part 2 -- vocabulary
+part 3 -- structure
