--- a/IELTS/simon小作文/小作文练习.md
+++ b/IELTS/simon小作文/小作文练习.md
@@ -1,3 +1,14 @@
+5-2  
+The bar charts compares the most important motivation for people aged differently and how supportive are their employers.
+
+It is clear that most people under 40 study for career, but the purpose turns to be interest for people aged over 49. Regarding of how old the employees are, over 30% of bosses would like to support them with time off or fees.
+
+At the age under 26, around 80% of candidates study to get a better career life, but as times goes, the figure fall to approximately 20% when the age is over 49. By contrast, only around 10% of students' reason is interest under the age of 26, and this number keeps rising to about 70% when the age comes to over 49 years old.
+
+Students under 26 years old get the most support from their employers, which is more than 60%. The age group of 30-39 see the lowest support which is about half of first one. After the age of 40, employees get more and more support from their employers, but it is still less compares with the young generation.
+
+
+
 5-4  
 The table compares the three main features of subway systems in six different cities fron all over the world.
 
