--- a/IELTS/simon大作文/大作文练习.md
+++ b/IELTS/simon大作文/大作文练习.md
@@ -11,4 +11,11 @@ On the other hand, tourists who come from other countries should certainly pay m
 
 In conclusion, I believe that foreign travellers should pay more than local people for cultrual and historical attractions.
 
+##5-2##
+It is often argued that whether teenagers should spend a year of time to work or travel before they go to college. While it sometimes can benefit the young students, it does bring negative impacts on them.
 
+There is a range of advantages which support this idea. By doing a social job, these turning adults could learn more about the real world which is quite different from what is described in the classroom and on textbooks. Knowing what the profession is really about can help a lot when they make decisions of which subject to learn in universities. Furthermore, the students can find out what are they interested in and prepare to gain a great success in the future. More life experience would be gathered, which will lead them to cherish the peaceful time to learn knowledge.
+
+Disadvantages, on the other hand, are easily to find. As we all know, the age of around 20 is the golden time for everyone to make academic achievements, so it must be a huge cost of time if they spend one year on other aspects. Not all families can afford the fund supporting a long time journey as the young generation can not really cover the cost by themselves. The most important is they are not mature enough to face the reality which is not always honest or safe. One of my friends got treated when he tried to work in a factory which pushed him to work 12 hours and without any payment.
+
+In conclusion, both positiveness and shortage always come together and people should be careful and serious when making decision.
